init snippet list style

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -69,6 +69,41 @@ Licensed under MIT
     color: #fff !important;
 }
 
+.u-tag {
+    background-color: #dfdfdf;
+    border-radius: 0px 2px 2px 0px;
+    color: #555;
+    display: inline-block;
+    font-size: 85%;
+    font-weight: 500;
+    line-height: 1.27273;
+    margin: 0 -5px 0 8px;
+    padding: 1px 7px;
+    position: relative;
+    text-decoration: none;
+}
+.u-tag:before {
+    border-top: 7px solid transparent;
+    border-right: 8px solid #dfdfdf;
+    border-bottom: 10px solid transparent;
+    content: "";
+    height: 0px;
+    position: absolute;
+    top: 0px;
+    left: -8px;
+    width: 0px;
+}
+.u-tag:after {
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    content: "";
+    height: 4px;
+    position: absolute;
+    top: 6px;
+    left: -2px;
+    width: 4px;
+}
+
 /* Global */
 body, #app {
     height: 100%;
@@ -94,3 +129,57 @@ body, #app {
     font-weight: 400;
 }
 
+/* Home */
+.blue-knowledge-list {
+    padding: 0;
+    margin: 10px 0;
+}
+.blue-knowledge-list > li {
+    display: table;
+    padding: 10px 0;
+    width: 100%;
+    border-top: 1px #ccc solid;
+    list-style: none;
+}
+.blue-knowledge-list > li:first-child {
+    border-top: none;
+}
+.blue-knowledge-list-info {
+    display: table-cell;
+    padding-left: 16px;
+    width: 100%;
+    vertical-align: top;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.blue-knowledge-list-title {
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    color: #075025;
+    /*line-height: 24px;*/
+    text-decoration: none;
+}
+.blue-knowledge-list-title:hover,
+.blue-knowledge-list-title:visited {
+    color: #685987;
+}
+.blue-knowledge-list-thumb {
+    display: table-cell;
+    width: 40px;
+    height: 40px;
+}
+.blue-knowledge-list-name {
+    float: right;
+    margin: 0 0 0 12px;
+    font-size: 13px;
+    font-weight: bold;
+    color: #555;
+}
+.blue-knowledge-list-date {
+    float: right;
+    margin-bottom: 0;
+    font-size: 13px;
+    font-weight: bold;
+    color: #555;
+}
