add markdown parser and github flavored markdown css

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -318,3 +318,10 @@ body, #app {
     /*color: #337ab7;*/
 }
 
+/*-------------------------------------
+  Snippet Create
+-------------------------------------*/
+
+.show-grid {
+    padding-top: 15px;
+}
