apply girhub flavored style

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -318,6 +318,14 @@ body, #app {
     /*color: #337ab7;*/
 }
 
+.markdown-body > pre {
+    border: none;
+}
+
+code {
+    color: inherit;
+}
+
 /*-------------------------------------
   Snippet Create
 -------------------------------------*/
